[LayoutNG] Floor table cell padding on the block sides.

This matches legacy layout, which generally doesn't support subpixels
for table layout.

Bug: 869869
Change-Id: Ib0d9c61cee27568388b3bc5fef81bf173ce8f77f
Reviewed-on: https://chromium-review.googlesource.com/c/1372632
Commit-Queue: Morten Stenshorne <mstensho@chromium.org>
Reviewed-by: Ian Kilpatrick <ikilpatrick@chromium.org>
Cr-Commit-Position: refs/heads/master@{#617076}
Former-commit-id: e865d9cff6864f415556dd8db58cd3f575f975d4